Révision et installation d'une animation en jQuery pour "l'infobulle"

--- a/feuille.css
+++ b/feuille.css
@@ -230,7 +230,7 @@ table{
     background-repeat: repeat-x;
 }
 .hover:hover .fondDonnee {
-    color:red;
+    color:white;
 }
 #croix{
     cursor:pointer;
