--- a/feuille.css
+++ b/feuille.css
@@ -18,6 +18,17 @@ h3{
 
 }
 
+ 
+#change1:hover{
+    cursor:pointer;
+    color:burlywood;
+}
+
+#change2:hover{ 
+    cursor:pointer;
+    color:darkkhaki;
+}
+
 #top {
     position:relative;
     z-index:3;
@@ -28,7 +39,8 @@ h3{
 } 
 
 #mainConteneur{
-    width:100%;
+    width:100%; 
+    min-height:1024px;
     font-family:"Lucida Sans Unicode", "Lucida Grande", Sans-Serif;	
 }
 
@@ -58,11 +70,10 @@ h3{
 
 #centre {
     width:1024px;
-    margin-bottom:60px; 
-    margin-left: auto;
-    margin-right: auto;
+    margin:auto;
     font-size:13px;
-}  
+} 
+
 
 #barre{
     width:1024px;
@@ -193,14 +204,14 @@ textarea{
 
 
 #table1{	
-    clear:both;	/*positionne la div en dessous des floattants*/	   
+    	   
     width:1000px;                     
     font-size:13px;
     text-align:center;
 }
 
 #table2{	
-    clear:both;	/*positionne la div en dessous des floattants*/	   
+   
     width:1000px; 
     border-top:0px;   
     font-size:13px;
@@ -250,13 +261,20 @@ textarea{
 }
 
 #croix{
-    cursor:pointer;
     float:top; 
     margin-left:8px;
     position:relative;
 }
 
 #croix:hover{
+    cursor:pointer;
+}
+
+#croix2{ 
+    cursor:pointer;
+    float:right;  
+}
+#croix2:hover{
     cursor:pointer;
 }
 
@@ -322,11 +340,28 @@ legend{
 
 
 #pair{
-     background-color:gray;
+    background-image:url(images/fondFieldset.png);
     background-repeat:repeat;
+    border:1px solid gray; 
+    font-size:15px;   
 }
 
 #impair{
-     background-color:silver;
-    background-repeat:repeat;
+    background-color:silver; 
+    background-repeat:repeat; 
+    border:1px solid gray;  
+    font-size:15px;  
+}
+
+#total{
+    background-color:burlywood; 
+    background-repeat:repeat; 
+    border:1px solid gray;    
+    font-size:15px;
+}
+
+#somme{  
+   font-style: italic;
+   margin-top:10px;
+   color:midnightblue;
 }
