--- a/feuille.css
+++ b/feuille.css
@@ -71,7 +71,7 @@ h3{
 #centre {
     width:1024px;
     margin:auto;
-    font-size:13px;
+    font-size:13px;  
 } 
 
 
@@ -207,7 +207,7 @@ td{
 }
 
 #afficherTableau{
-     width:1000px;    
+    width:985px; 
 }
 
 #table1{	   	                    
@@ -215,22 +215,14 @@ td{
     text-align:center;
 }
 
-#table3{	  width:1000px;      	                    
-    font-size:13px;
-    text-align:center;
-}
 
-#table2{	   
-    border-top:0px;   
-    font-size:13px;
-    text-align:center;
     /*-moz-border-radius: 20px;
     border-radius: 20px;
     -khtml-border-radius: 20px;
     -webkit-border-radius: 20px;
     border-bottom: 1px solid #fff;
 }*/
-}
+
 
 .titremois{
     background-image:url(images/fondT.png);
@@ -270,9 +262,8 @@ td{
 }
 
 #croix{
-    float:top; 
-    margin-left:8px;
-    position:relative;
+   cursor:pointer;
+   float:right;  
 }
 
 #croix:hover{
@@ -283,6 +274,7 @@ td{
     cursor:pointer;
     float:right;  
 }
+
 #croix2:hover{
     cursor:pointer;
 }
@@ -294,6 +286,7 @@ td{
     height:20px;
     font-size:13px;
     font-weight:bold;
+    margin-bottom:15px;
 }
 ol{ 
     float:left;
