--- a/feuille.css
+++ b/feuille.css
@@ -3,9 +3,9 @@ body{
     padding:0px;
     margin:0px;
     background: #b0a48d; /* Old browsers */
-    background: -moz-linear-gradient(left, #f2f6f8 2%, #f2f6f8 2%, #d8e1e7 50%, #e0eff9 100%); /* FF3.6-15 */
-    background: -webkit-linear-gradient(left, #f2f6f8 2%,#f2f6f8 2%,#d8e1e7 50%,#e0eff9 100%); /* Chrome10-25,Safari5.1-6 */
-    background: linear-gradient(to right, #f2f6f8 2%,#f2f6f8 2%,#d8e1e7 50%,#e0eff9 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+    background: -moz-linear-gradient(left, #f2f6f8 2%, #f2f6f8 2%, #d8e1e7 50%, #f2f6f8 100%); /* FF3.6-15 */
+    background: -webkit-linear-gradient(left, #f2f6f8 2%,#f2f6f8 2%,#d8e1e7 50%,#f2f6f8 100%); /* Chrome10-25,Safari5.1-6 */
+    background: linear-gradient(to right, #f2f6f8 2%,#f2f6f8 2%,#d8e1e7 50%,#f2f6f8 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
     filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f2f6f8', endColorstr='#e0eff9',GradientType=1 ); /* IE6-9 */
 }
 
